# BraKet-quantum-circuit-compiler-and-simulator

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
braket/: __init__.py  ast_nodes.py  cli.py  decomposer.py  errors.py  gates.py  lexer.py  mapper.py  optimizer.py  parser.py  render.py  simulator.py  tokens.py
examples/: README.md  bell_state.bkt  ghz_state.bkt  interference.bkt
tests/: helpers.py  test_cli.py  test_decomposer.py  test_end_to_end.py  test_gates_extended.py  test_lexer.py  test_mapper.py  test_optimizer.py  test_parser.py  test_qiskit_crosscheck.py  test_render.py  test_scaffold.py  test_simulator.py
